--- a/Fody.targets
+++ b/Fody.targets
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <UsingTask 
 	  TaskName="Fody.WeavingTask" 
-	  AssemblyFile="$(MSBuildThisFileDirectory)\Fody.dll" />
+	  AssemblyFile="$(MSBuildThisFileDirectory)Fody.dll" />
   <Target 
 	  AfterTargets="CopyFilesToOutputDirectory" 
 	  Name="FodyTarget">
