--- a/Integration/WithNugetWeavers/WithNugetWeavers.csproj
+++ b/Integration/WithNugetWeavers/WithNugetWeavers.csproj
@@ -46,5 +46,9 @@
     <Content Include="FodyWeavers.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <UsingTask TaskName="PepitaGet.RestorePackagesTask" AssemblyFile="$(SolutionDir)..\Tools\PepitaGet.dll" />
+  <Target Name="BeforeBuild">
+    <PepitaGet.RestorePackagesTask />
+  </Target>
   <Import Project="$(SolutionDir)\..\ForSample\Fody.targets" />
 </Project>
