--- a/FodyVsPackage.Tests/packages.config
+++ b/FodyVsPackage.Tests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NSubstitute" version="1.4.0.0" />
+  <package id="Moq" version="4.0.10827" targetFramework="net40" />
   <package id="NUnit" version="2.6.0.12054" />
 </packages>
