--- a/FodyVSPackage/FodyVSPackage.csproj
+++ b/FodyVSPackage/FodyVSPackage.csproj
@@ -125,9 +125,11 @@
     <Compile Include="CurrentProjectFinder.cs" />
     <Compile Include="CurrentVersion.cs" />
     <Compile Include="DisableMenuConfigure.cs" />
+    <Compile Include="FodyDirectoryFinder.cs" />
     <Compile Include="MenuStatusChecker.cs" />
     <Compile Include="MSBuildKiller.cs" />
     <Compile Include="ProcessExtensions.cs" />
+    <Compile Include="ToolDirectoryTreeWalker.cs" />
     <Compile Include="Wpf\EnumBooleanConverter.cs" />
     <Compile Include="MessageDisplayer.cs" />
     <Compile Include="ExceptionDialog.cs" />
