--- a/FodyVsPackage.Tests/FodyVsPackage.Tests.csproj
+++ b/FodyVsPackage.Tests/FodyVsPackage.Tests.csproj
@@ -73,6 +73,10 @@
       <Project>{2356DD30-B9AC-48ED-A0A1-103382A9CFC3}</Project>
       <Name>FodyVSPackage</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Fody\Fody.csproj">
+      <Project>{64880F43-E6C1-428E-B00A-E0374697B5CF}</Project>
+      <Name>Fody</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestProjects\ProjectWithNoWeaving.csproj">
@@ -87,6 +91,7 @@
   <ItemGroup>
     <Folder Include="Dir1\" />
     <Folder Include="Dir2\" />
+    <Folder Include="Tools\Fody\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
