--- a/Fody.Tests/Fody.Tests.csproj
+++ b/Fody.Tests/Fody.Tests.csproj
@@ -61,7 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyVersionReaderTests.cs" />
     <Compile Include="ContainsTypeCheckerTests.cs" />
+    <Compile Include="DomainAssemblyResolverTests.cs" />
     <Compile Include="InstanceLinker\NoWeaversConfiguredInstanceLinkerTests.cs" />
     <Compile Include="InstanceLinker\WeaversConfiguredInstanceLinkerTests.cs" />
     <Compile Include="NugetConfigReaderTest.cs" />
@@ -70,6 +72,7 @@
     <Compile Include="ProjectWeaversFinderTests.cs" />
     <Compile Include="SearchDirectories\AddinDirectoriesTests.cs" />
     <Compile Include="SearchDirectories\AddToolsAssemblyLocationToAddinSearchTests.cs" />
+    <Compile Include="ShouldStartSinceFileChangedTests.cs" />
     <Compile Include="WeaverAssemblyPathFinderTests.cs" />
     <Compile Include="WeaverProjectFileFinderTests.cs" />
     <Compile Include="WeaversHistoryTests.cs" />
@@ -121,6 +124,9 @@
     <Folder Include="WeaversProjectFileFinder\WithNoWeaver\Weavers\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BadAssembly.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NugetPackagePathFinder\FakeSolutionWithNugetConfig\Solution.sln" />
     <Content Include="NugetPackagePathFinder\FakeSolution\Solution.sln" />
     <Content Include="ProjectWeaversReaderTests\FodyWeavers1.xml">
