--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,5 +6,6 @@
   <repository path="..\FodyIsolated.Tests\packages.config" />
   <repository path="..\FodyIsolated\packages.config" />
   <repository path="..\FodyVsPackage.Tests\packages.config" />
+  <repository path="..\FodyVSPackage\packages.config" />
   <repository path="..\SampleTask.Fody\packages.config" />
 </repositories>
