--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text eol=crlf
 
-*.xml     eol=crlf
-*.targets eol=crlf
-
+*.xml     text
+*.targets text
 
 # Custom for Visual Studio
 *.cs     diff=csharp
