--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,9 @@
 # Auto detect text files and perform LF normalization
-* text eol=crlf
+* text 
 
-*.xml     text eol=crlf
-*.targets text eol=crlf
+# Don't check these into the repo as LF to work around TeamCity bug
+*.xml     -text 
+*.targets -text
 
 # Custom for Visual Studio
 *.cs     diff=csharp
@@ -12,19 +13,5 @@
 *.fsproj merge=union
 *.dbproj merge=union
 
-# Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
-
 # Denote all files that are truly binary and should not be modified.
-*.dll binary
-*.exe binary
 *.snk binary
