--- a/FodyVSPackage/FodyVSPackage.csproj
+++ b/FodyVSPackage/FodyVSPackage.csproj
@@ -117,6 +117,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
+    <None Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\NugetConfigReader.cs">
@@ -295,4 +296,5 @@
   <Target Name="ConfigureVsSDKBuild">
     <EnvironmentVariable Variable="VsSDKToolsPath" Value="$(VsSDKInstall)" />
   </Target>
+  <Import Project="$(ProjectPath)\..\..\Tools\Fody\Fody.targets" />
 </Project>
