--- a/Fody/Fody.csproj
+++ b/Fody/Fody.csproj
@@ -48,9 +48,8 @@
   <ItemGroup>
     <Compile Include="..\CommonAssemblyInfo.cs" />
     <Compile Include="..\NugetConfigReader.cs">
-      <Link>NugetConfigReader.cs</Link>
+      <Link>SearchDirectories\NugetConfigReader.cs</Link>
     </Compile>
-    <Compile Include="AddinDirectoriesFinder.cs" />
     <Compile Include="AssemblyLocation.cs" />
     <Compile Include="ContainsTypeChecker.cs" />
     <Compile Include="DomainAssemblyResolver.cs" />
@@ -58,21 +57,20 @@
     <Compile Include="InstanceLinker\WeaversConfiguredInstanceLinker.cs" />
     <Compile Include="InstanceLinker\NoWeaversConfiguredInstanceLinker.cs" />
     <Compile Include="ProjectWeaversFinder.cs" />
-    <Compile Include="SearchDirectories\AddinSearchDirectories.cs" />
+    <Compile Include="AddinFinder\AddinSearchDirectories.cs" />
     <Compile Include="AssemblyVersionReader.cs" />
     <Compile Include="BuildLogger.cs" />
-    <Compile Include="NugetPackagePathFinder.cs" />
+    <Compile Include="AddinFinder\NugetPackagePathFinder.cs" />
     <Compile Include="FileChangedChecker.cs" />
     <Compile Include="ProjectPathFinder.cs" />
     <Compile Include="ProjectWeaversReader.cs" />
     <Compile Include="AssemblyPathValidator.cs" />
-    <Compile Include="SearchDirectories\AddToolsAssemblyLocationToAddinSearch.cs" />
+    <Compile Include="AddinFinder\AddToolsAssemblyLocationToAddinSearch.cs" />
     <Compile Include="WeaverAssemblyPathFinder.cs" />
-    <Compile Include="SearchDirectories\AddMsBuildConfigToAddinSearch.cs" />
-    <Compile Include="SearchDirectories\AddNugetDirectoryToAddinSearch.cs" />
-    <Compile Include="SearchDirectories\AddToolsDirectoryToAddinSearch.cs" />
+    <Compile Include="AddinFinder\AddNugetDirectoryToAddinSearch.cs" />
+    <Compile Include="AddinFinder\AddToolsDirectoryToAddinSearch.cs" />
     <Compile Include="SolutionPathValidator.cs" />
-    <Compile Include="AddinFilesEnumerator.cs" />
+    <Compile Include="AddinFinder\AddinFilesEnumerator.cs" />
     <Compile Include="WeaverProjectContainsWeaverChecker.cs" />
     <Compile Include="WeaverProjectFileFinder.cs" />
     <Compile Include="WeaversHistory.cs" />
