--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caseless.Fody" version="1.0.0.0" />
+  <package id="Virtuosity.Fody" version="1.13.0.0" />
 </packages>
