--- a/Integration/WithNugetWeavers/WithNugetWeavers.csproj
+++ b/Integration/WithNugetWeavers/WithNugetWeavers.csproj
@@ -46,9 +46,6 @@
     <Content Include="FodyWeavers.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <UsingTask TaskName="PepitaGet.RestorePackagesTask" AssemblyFile="$(SolutionDir)..\Tools\PepitaGet.dll" />
-  <Target Name="BeforeBuild">
-    <PepitaGet.RestorePackagesTask />
-  </Target>
+  <Import Project="$(ProjectPath)\..\..\Tools\Pepita\PepitaGet.targets" />
   <Import Project="$(SolutionDir)\..\ForSample\Fody.targets" />
 </Project>
