--- a/Integration/WithNugetAndInSolutionWeavers/WithNugetAndInSolutionWeavers.csproj
+++ b/Integration/WithNugetAndInSolutionWeavers/WithNugetAndInSolutionWeavers.csproj
@@ -47,6 +47,9 @@
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(ProjectPath)\..\..\..\Tools\Pepita\PepitaGet.targets" />
   <Import Project="$(SolutionDir)\..\ForSample\Fody.targets" />
